--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-fastapi==0.115.8
-uvicorn==0.34.0
-sqlalchemy==2.0.38
-pydantic==2.10.6
-pytest==8.3.4
-httpx==0.28.1
+fastapi>=0.115,<1
+uvicorn>=0.30,<1
+sqlalchemy>=2.0,<3
+pydantic>=2.0,<3
+pytest>=8.0,<9
+httpx>=0.27,<1
